package LE_09_04;

public enum Genre {
    ROCK,
    POP,
    JAZZ,
    HIPHOP,
    OTHER
}
