@startuml
skinparam classAttributeIconSize 0
title Music Management (LE_09-04)

package "LE_09_04.model" {
  class Artist {
    -artistID: int
    -name: String
  }

  enum Genre {
    ROCK
    POP
    JAZZ
    HIPHOP
    OTHER
  }

  class Album {
    -albumID: int
    -title: String
    -genre: Genre
    -artist: Artist
    -tracks: List<Track>
    +getTotalDurationSec(): int
    +addTrack(track: Track): void
    +removeTrack(trackId: int): boolean
    +clearTracks(): void
  }

  class Track {
    -trackId: int
    -title: String
    -mp3FileName: String
    -lengthSec: int
  }
}

package "LE_09_04.management" {
  class MusicManagement {
    -albums: List<Album>
    -artists: List<Artist>
    -nextAlbumId: int
    -nextArtistId: int
    -nextTrackId: int

    +generateAlbumId(): int
    +generateArtistId(): int
    +generateTrackId(): int

    +findAlbumById(albumId: int): Album
    +findArtistById(artistId: int): Artist

    +addAlbum(album: Album): void
    +addArtist(artist: Artist): void

    +removeAlbum(albumId: int): boolean
    +addTrackToAlbum(albumId: int, track: Track): boolean
    +removeTrackFromAlbum(albumId: int, trackId: int): boolean

    +hasArtists(): boolean

    +printAllAlbums(): void
    +printAlbumDetails(albumId: int): void
    +printAllArtistsShort(): void
  }
}

package "LE_09_04.app" {
  class MenuPrinter {
    {static} +WIDTH: int
    {static} +printMenu(): void
    {static} +printSeparator(): void
    {static} +printTitle(title: String): void
  }

  class ConsoleUi {
    -scanner: Scanner
    -manager: MusicManagement
    +start(): void
  }
}

' ===== Associations (domain) =====
Artist "1" <-- "0..*" Album : performer
Album  "1" *-- "0..*" Track : contains

' ===== Management contains lists =====
MusicManagement "1" o-- "0..*" Album  : albums
MusicManagement "1" o-- "0..*" Artist : artists

' ===== Dependencies (printing / ui) =====
MusicManagement ..> MenuPrinter : uses
ConsoleUi ..> MusicManagement : uses

note right of Track
mp3FileName is auto-generated from title:
lowercase, spaces -> "_", + ".mp3"
end note

note bottom of MusicManagement
IDs are generated internally via:
generateAlbumId(), generateArtistId(), generateTrackId()
end note

@enduml
